[package]
name = "kixtia"
version = "0.1.0"
authors = ["almamp"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.3"
actix-rt = "2.0.2"
regex = "1"
log = { version = "0.4", features = ["std", "serde"] }
chrono = "0.4"
lazy_static = "1.4.0"
clap = "~2.27.0"
serde_derive = "1.0.117"
derive_more = "0.99.0"
rusqlite = "0.24.1"
serde = "1.0.114"
serde_json = "1.0.62"
actix-files = "0.4.1"
fallible-iterator = "0.2.0"

